--- a/views/layouts/index.ejs
+++ b/views/layouts/index.ejs
@@ -1,21 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="/dist/css/bootstrap.min.css">
-        <title></title>
-    </head>
-<body>    
+<%- include('header.ejs', {title: 'Badyet - Track & Plan your Budget!'}) %>
+</head>
+<body>  
 
-<div class="alert alert-primary" role="alert">
-    dsad
-  </div>
-
-  <div class="alert alert-danger" role="alert">
-    A simple danger alert—check it out!
-  </div>
-
-</body>
-</html> 
+    <button type="button" class="btn btn-info">Index</button>
+  
+<%- include('footer.ejs') %>
