--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -5,4 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/dist/css/bootstrap.min.css">
-    <title><%= typeof title === 'undefined' ? 'PCMS' : title %> </title>
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+    <link rel="stylesheet" href="/css/main.css">
+    <title><%= typeof title === 'undefined' ? 'Badyet' : title %> </title>
+</head>
+<body> 
+    
+    <%- include('navbar.ejs') %>
