--- a/views/layouts/index.ejs
+++ b/views/layouts/index.ejs
@@ -1,5 +1,6 @@
 <%- include('header.ejs', {title: 'Badyet - Track & Plan your Budget!'}) %>
 
+    <%- include('navbar.ejs') %>
     
   
 <%- include('footer.ejs') %>
