--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -2,9 +2,8 @@
     <nav class="navbar">
         <a class="navbar-brand brand-title" href="/"><h2><strong>Badyet</strong></h2></a>
         <div class="form-inline">
-            <button class="btn btn-outline-secondary login-account" type="button">Sign In</button>
-            <button class="btn btn-outline-success text-right create-account" type="button">Create Account</button>
+            <a class="btn btn-outline-secondary login-account" role="button" href="/app/sign-in">Sign In</a>
+            <a class="btn btn-outline-success text-right create-account" role="button" href="/app/sign-up">Create Account</a>
         </div>
     </nav>
 </div>
-
