--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,6 +1,6 @@
 <div class="container navigation-var">
     <nav class="navbar">
-        <a class="navbar-brand brand-title" href="/"><h2><strong>Badyet</strong></h2></a>
+        <a class="navbar-brand brand-title main-logo" href="/"><h2>Badyet</h2></a>
         <div class="form-inline">
             <a class="btn btn-outline-secondary login-account" role="button" href="/app/sign-in">Sign In</a>
             <a class="btn btn-outline-success text-right create-account" role="button" href="/app/sign-up">Create Account</a>
