--- a/views/users/sign_in.ejs
+++ b/views/users/sign_in.ejs
@@ -1,25 +1,21 @@
 <%- include('../layouts/header.ejs', {title: 'Badyet - Track & Plan your Budget!'}) %>
        
-    <%- include('../layouts/navbar.ejs') %>
-
     <div class="container main-signin-form">
         <div class="row justify-content-center">
             <div class="col-6">
 
-                <div class="text-center signin-form-logo">
-                    <h2><strong>Badyet</strong></h1>
+                <div class="text-center signin-form-logo main-logo">
+                    <h2>Badyet</h2>
                 </div>
 
                 <div class="signin-form">
+                    <div class="form-group text-center">
+                        <label for="label"><h4>Sign In</h4></label>
+                    </div>
                     <form>
-                        <div class="form-group text-center">
-                            <label for="label"><h3>Create My Account</h3></label>
-                        </div>
                         <div class="form-group">
                             <label for="userEmail"><strong>Email address</strong></label>
-                            <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" placeholder="Enter email">
-                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                        </div>
+                            <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" placeholder="Enter email">                        </div>
     
                         <div class="form-group">
                             <label for="userPassword"><strong>Password</strong></label>
@@ -28,13 +24,21 @@
     
                         <button type="submit" class="btn btn-primary btn-block">Create account</button>
 
-                        <div class="form-group text-center form-p">
-                            <label for="label"><small>By clicking Create Account, you agree to our <br>
-                                        License Agreement and Privacy Policy</small></label>
+                        <div class="form-group text-center main-form-policy">
+                            <small>
+                                    <label for="label">Forgot your
+                                    <a class="btn btn-link form-policy" href="#" role="button">Username</a> or
+                                    <a class="btn btn-link form-policy" href="#" role="button">password?</a>
+                                </label>
+                            </small>
                         </div>
                     </form>
-                </div>
 
+                    <div class="form-group text-center">
+                        <label for="label">New to Badyet?</label>
+                        <a class="btn btn-outline-secondary btn-block" href="/app/sign-up" role="button">Create Account</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
