--- a/views/users/sign_up.ejs
+++ b/views/users/sign_up.ejs
@@ -1,20 +1,24 @@
 <%- include('../layouts/header.ejs', {title: 'Badyet - Track & Plan your Budget!'}) %>
        
-    <%- include('../layouts/navbar.ejs') %>
-
     <div class="container main-signin-form">
         <div class="row justify-content-center">
             <div class="col-6">
 
-                <div class="text-center signin-form-logo">
-                    <h2><strong>Badyet</strong></h1>
+                <div class="text-center signin-form-logo main-logo">
+                    <h2>Badyet</h2>
                 </div>
 
                 <div class="signin-form">
-                    <form>
                         <div class="form-group text-center">
-                            <label for="label"><h3>Create My Account</h3></label>
+                                <label for="label"><h4>Create My Account</h4></label>
+                            </div>
+                    <form>
+
+                        <div class="form-group">
+                                <label for="userName"><strong>Username</strong></label>
+                                <input type="email" class="form-control" id="userEmail" aria-describedby="userName" placeholder="Enter username">
                         </div>
+
                         <div class="form-group">
                             <label for="userEmail"><strong>Email address</strong></label>
                             <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" placeholder="Enter email">
@@ -37,8 +41,12 @@
                             </small>
                         </div>
                     </form>
-                </div>
 
+                    <div class="form-group text-center">
+                        <label for="label">Already have an account?</label>
+                        <a class="btn btn-outline-secondary btn-block" href="/app/sign-in" role="button">Sign In</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
