--- a/views/users/sign_in.ejs
+++ b/views/users/sign_in.ejs
@@ -1,8 +1,8 @@
 <%- include('../layouts/header.ejs', {title: 'Badyet - Track & Plan your Budget!'}) %>
-       
+    <%- include('../layouts/navbar.ejs') %> 
     <div class="container main-signin-form">
         <div class="row justify-content-center">
-            <div class="col-6">
+            <div class="col-5">
 
                 <div class="text-center signin-form-logo main-logo">
                     <h2>Badyet</h2>
@@ -22,7 +22,7 @@
                             <input type="password" class="form-control" id="userPassword" placeholder="Password">
                         </div>
     
-                        <button type="submit" class="btn btn-primary btn-block">Create account</button>
+                        <button type="submit" class="btn btn-primary btn-block">Sign In</button>
 
                         <div class="form-group text-center main-form-policy">
                             <small>
