--- a/views/users/sign_up.ejs
+++ b/views/users/sign_up.ejs
@@ -1,8 +1,8 @@
 <%- include('../layouts/header.ejs', {title: 'Badyet - Track & Plan your Budget!'}) %>
-       
+    <%- include('../layouts/navbar.ejs') %> 
     <div class="container main-signin-form">
         <div class="row justify-content-center">
-            <div class="col-6">
+            <div class="col-5">
 
                 <div class="text-center signin-form-logo main-logo">
                     <h2>Badyet</h2>
