--- a/views/users/sign_up.ejs
+++ b/views/users/sign_up.ejs
@@ -9,38 +9,38 @@
                 </div>
 
                 <div class="signin-form">
-                        <div class="form-group text-center">
-                                <label for="label"><h4>Create My Account</h4></label>
-                            </div>
-                    <form>
+                    <div class="form-group text-center">
+                        <label for="label"><h4>Create My Account</h4></label>
+                    </div>
 
+                    <form action="/app/sign-up" method="POST">
                         <div class="form-group">
                                 <label for="userName"><strong>Username</strong></label>
-                                <input type="email" class="form-control" id="userEmail" aria-describedby="userName" placeholder="Enter username">
+                                <input type="text" name="username" class="form-control" id="userName" aria-describedby="userName" placeholder="Enter username">
                         </div>
 
                         <div class="form-group">
                             <label for="userEmail"><strong>Email address</strong></label>
-                            <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" placeholder="Enter email">
+                            <input type="email" name="email" class="form-control" id="userEmail" aria-describedby="emailHelp" placeholder="Enter email">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
     
                         <div class="form-group">
                             <label for="userPassword"><strong>Password</strong></label>
-                            <input type="password" class="form-control" id="userPassword" placeholder="Password">
+                            <input type="password" name="password" class="form-control" id="userPassword" placeholder="Password">
                         </div>
     
                         <button type="submit" class="btn btn-primary btn-block">Create account</button>
-
-                        <div class="form-group text-center main-form-policy">
-                            <small>
-                                <label for="label">By clicking Create Account, you agree to our <br>
-                                    <button type="button" class="btn btn-link form-policy">License Agreement</button> and 
-                                    <button type="button" class="btn btn-link form-policy">Privacy Policy</button>
-                                </label>
-                            </small>
-                        </div>
                     </form>
+
+                    <div class="form-group text-center main-form-policy">
+                        <small>
+                            <label for="label">By clicking Create Account, you agree to our <br>
+                                <button type="button" class="btn btn-link form-policy">License Agreement</button> and 
+                                <button type="button" class="btn btn-link form-policy">Privacy Policy</button>
+                            </label>
+                        </small>
+                    </div>
 
                     <div class="form-group text-center">
                         <label for="label">Already have an account?</label>
