--- a/views/users/sign_in.ejs
+++ b/views/users/sign_in.ejs
@@ -12,14 +12,14 @@
                     <div class="form-group text-center">
                         <label for="label"><h4>Sign In</h4></label>
                     </div>
-                    <form>
+                    <form action="/app/sign-in" method="POST">
                         <div class="form-group">
                             <label for="userEmail"><strong>Email address</strong></label>
-                            <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" placeholder="Enter email">                        </div>
+                            <input type="email" name="email" class="form-control" id="userEmail" aria-describedby="emailHelp" placeholder="Enter email">                        </div>
     
                         <div class="form-group">
                             <label for="userPassword"><strong>Password</strong></label>
-                            <input type="password" class="form-control" id="userPassword" placeholder="Password">
+                            <input type="password" name="password" class="form-control" id="userPassword" placeholder="Password">
                         </div>
     
                         <button type="submit" class="btn btn-primary btn-block">Sign In</button>
