--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -1,5 +1,25 @@
 <%- include('../layouts/header.ejs', {title: 'Badyet - Track & Plan your Budget!'}) %>
-<%- include('../layouts/navbar.ejs') %> 
-<h1>Badyet Page</h1>
+
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="flex-column col-md-2 sidebar shadow-box">
+                <div class="nav-link active nav-brand text-center" >
+                    <h2>Badyet</h2>
+                </div>
+
+                <div class="nav-link nav-item-badyet text-center" >
+                        <a class="nav-link" href="#"><strong>Badyet</strong></a>
+                </div>
+
+                <div class="nav-lin nav-item-info text-center">
+                        <h5>Username</h5>
+                        <a class="nav-link" href="#">Sign Out</a>
+                        <a href="/">Home Page</a>
+                </div>
+
+            </div>         
+        </div>
+    </div>
 
 <%- include('../layouts/footer.ejs') %>
