--- a/views/app/sign_up.ejs
+++ b/views/app/sign_up.ejs
@@ -1,5 +1,4 @@
 <%- include('../layouts/header.ejs', {title: 'Badyet - Track & Plan your Budget!'}) %>
-    <%- include('../layouts/navbar.ejs') %> 
     <div class="container main-signin-form">
         <div class="row justify-content-center">
             <div class="col-5">
@@ -8,7 +7,7 @@
                     <h2>Badyet</h2>
                 </div>
 
-                <div class="signin-form">
+                <div class="signin-form shadow-box">
                     <div class="form-group text-center">
                         <label for="label"><h4>Create My Account</h4></label>
                     </div>
