--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
-body {
+html body {
+    height: 100%;
     font-family: 'Karla', sans-serif;
-    background-color: #fafafa;;
-    
+    background-color: #fafafa;; 
 }
 
 .main-logo > h2 {
@@ -33,8 +33,8 @@ body {
 
 .shadow-box {
     background-color: white;
-    box-shadow: 0 0px 5px rgba(0,0,0,.1);
-    border: 1px solid rgba(0,0,0,.1);
+    box-shadow: 0 0px 5px rgba(0,0,0,.2);
+    border: 1px solid rgba(0,0,0,.2);
 }
 
 .main-signin-form {
@@ -60,39 +60,79 @@ body {
     padding: 0px;
 }
 
-/******************** Sizebar ******************/
-.sidebar {
-    top: 0;
-    bottom: 0;
-    left: 0;
-    padding-right: 0px;
-    position: fixed;
+/* Side Panel  */
+
+.main-app-container {
     height: 100vh;
-    display: flex;
+    overflow: auto;
 }
 
-.nav-brand > h2 {
+/******************** Left *****************/
+
+.left-panel-container {
+    height: 100vh;
+    background-color: #fafafa;
+}
+
+.left-panel-brand {
     color: #c20606;
-    font-weight: 600;
-    margin-top: 30px;
-    margin-bottom: 20px;
+    height: 10%;
+    box-shadow: 0 0px 5px rgba(0,0,0,.2);
+    border: 1px solid rgba(0,0,0,.2);
 }
 
-/*sidebar color: #69757a;*/
-
-.nav-item-badyet > a {
-    color: #c20606;
-    font-size: 20px;
+.left-panel-control {
+    height: 70%;
+    box-shadow: 0 0px 5px rgba(0,0,0,.2);
+    border: 1px solid rgba(0,0,0,.2);
 }
 
-.nav-item-badyet {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
+.left-panel-nametag {
+    height: 20%;
+    box-shadow: 0 0px 5px rgba(0,0,0,.2);
+    border: 1px solid rgba(0,0,0,.2);
 }
 
-.nav-item-info {
-    display: flex;
-    flex-direction: column;
+
+
+/******************** MIDDLE *****************/
+.main-panel-container {
+
+}
+
+/* Data Mid */
+.main-data {
+    max-height: 2279px;
+    margin: 0px;
+    background-color: #fafafa;
+}
+
+.data-item{
+    height: 200px;
+    background-color: white;
+    box-shadow: 0 0px 5px rgba(0,0,0,.2);
+    border: 1px solid rgba(0,0,0,.2);
+    margin: 10px 10px 20px 10px;
+    border-radius: 10px;
+}
+
+/* Date Nav */
+
+.main-date {
+    height: 100px;
+    background-color: #fafafa;
+    margin: 0px;
+}
+
+.data-date{
+    height: 65px;
+    background-color: #fafafa;;
+    border-bottom: 1px solid #69757a;
+    margin: 10px 10px 20px 10px;
+  
+}
+
+/******************** RIGHT *****************/
+.right-panel-container {
+    height: 100vh;
 }
