--- a/views/layouts/script.ejs
+++ b/views/layouts/script.ejs
@@ -1,2 +1,5 @@
 <script src="/dist/jquery.min.js"></script>
 <script src="/dist/js/bootstrap.min.js"></script>
+<% if (signInJs) { %>
+<script src="/js/app.js"></script>
+<% } %>    
