--- a/views/app/settings.ejs
+++ b/views/app/settings.ejs
@@ -1,5 +1,5 @@
 <%- include('../layouts/header.ejs', {title: 'Badyet - Track & Plan your Budget!'}) %>
 
-    <%- include('./sidepanel.ejs', {badyet: true}) %>
+    <%- include('./sidepanel.ejs', {settings: true, badyet: false}) %>
 
 <%- include('../layouts/footer.ejs') %>
