add local variables to view

--- a/views/app/sidepanel.ejs
+++ b/views/app/sidepanel.ejs
@@ -20,7 +20,7 @@
             </div>
 
             <div class="row left-panel-nametag text-center">
-                <div class="col">nametag
+                <div class="col"><%= currentUserUsername %>
                     <div class="nametag-main">
                         <form action="/app/sign-out" method="POST">
                             <button type="submit" class="btn btn-outline-secondary" role="button" href="/">Sign Out</button>
