--- a/views/auth/sign_up.ejs
+++ b/views/auth/sign_up.ejs
@@ -29,6 +29,7 @@
                             <input type="password" name="password" class="form-control" id="userPassword" placeholder="Password">
                         </div>
     
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <button type="submit" class="btn btn-primary btn-block">Create account</button>
                     </form>
 
