--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,8 @@ html body {
 .main-logo > h2 {
     color: #c20606;
     font-weight: 600;
+    font-size: 50px;
+    font-family: 'Italianno', cursive;
 }
 
 .brand-title:visited {
@@ -75,7 +77,7 @@ html body {
 }
 
 .left-panel-brand {
-    color: #c20606;
+    display: block;
     height: 10%;
     box-shadow: 0 0px 5px rgba(0,0,0,.2);
     border: 1px solid rgba(0,0,0,.2);
