--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Italianno&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
     <title><%= typeof title === 'undefined' ? 'Badyet' : title %> </title>
 </head>
