--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -1,5 +1,43 @@
 <%- include('../layouts/header.ejs', {title: 'Badyet - Track & Plan your Budget!'}) %>
+<div class="container-fluid">
+    <div class="row main-app-container">
 
-    <%- include('./sidepanel.ejs', {badyet: true}) %>
+        <%- include('./sidepanel.ejs', {badyet: true}) %>
 
+        <div class="col-6 main-panel-container">
+                <div class="row main-date sticky-top"> 
+                    <div class="col">
+                      
+                        <div class="data-date">
+                            <div id="badyet-date">
+
+                            </div>
+                            <!-- <button type="button" class="btn btn-light"><h1><strong>May <small>2019</small></strong></h1></button> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row main-data">
+                    <div class="col">
+                        
+
+                        <div class="data-item">Header</div>
+                        <div class="data-item">Data1</div>
+                        <div class="data-item">Data2</div>
+                        <div class="data-item">Data3</div>
+                        <div class="data-item">Data4</div>
+                        <div class="data-item">Data5</div>
+                        <div class="data-item">Data6</div>
+
+                    </div>
+                </div>    
+        </div>
+
+        <div class="col-4 right-panel-container sticky-top">
+            right-panel-container
+        </div>
+    </div>
+</div>
+
+<script src="/js/badyet.js"></script>
 <%- include('../layouts/footer.ejs') %>
