--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Italianno&display=swap" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/main.css">
     <title><%= typeof title === 'undefined' ? 'Badyet' : title %> </title>
 </head>
