--- a/views/app/sidepanel.ejs
+++ b/views/app/sidepanel.ejs
@@ -3,14 +3,14 @@
         <a class="navbar-brand brand-title main-logo" href="/"><h2>Badyet</h2></a>
     </div>
 
-    <div class="row left-panel-control  text-center">
+    <div class="row left-panel-control text-center">
         <div class="col">
-            <div class="upper-main-control">
-                <a class="btn btn-outline-secondary" role="button" href="/app/badyet">Badyet</a>
+            <div class="upper-main-control main-control-active">
+               <a role="button" class="btn main-control-btn" href="/app/badyet"><i class="fas fa-hand-holding-usd icon-settings"></i>Badyet</a>
             </div>
 
             <div class="lower-main-control">
-                <a class="btn btn-outline-secondary" role="button" href="/app/settings">Settings</a>
+               <a role="button" class="btn main-control-btn" href="/app/settings"><i class="fas fa-user-cog icon-settings"></i>Settings</a>
             </div>
         </div>
     </div>
