--- a/public/css/main.css
+++ b/public/css/main.css
@@ -163,7 +163,7 @@ html body {
 }
 
 .data-item{
-    height: 200px;
+    height: auto;
     background-color: white;
     box-shadow: 0 0px 5px rgba(0,0,0,.2);
     border: 1px solid rgba(0,0,0,.2);
