--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -21,8 +21,42 @@
                     <div class="col">
                         
 
-                        <div class="data-item">Header</div>
-                        <div class="data-item">Data1</div>
+                        <div class="data-item">
+                                Income for May <a role="button" data-toggle="collapse" class="btn main-control-btn" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>
+                            
+                            
+                                <div class="collapse" id="collapseExample1">
+                                    <div class="card card-body">
+                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                    </div>
+                                </div>
+    
+                                <div class="collapse" id="collapseExample1">
+                                    <div class="card card-body">
+                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                    </div>
+                                </div>
+                        </div>
+
+
+                        <div class="data-item">
+                              
+                            Giving<a role="button" data-toggle="collapse" class="btn main-control-btn" aria-expanded="false" aria-controls="collapseExample" href="#collapseExample"><i class="fas fa-caret-up"></i></a>
+                            
+                            
+                            <div class="collapse" id="collapseExample">
+                                <div class="card card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                </div>
+                            </div>
+
+                            <div class="collapse" id="collapseExample">
+                                <div class="card card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                </div>
+                            </div>
+                            
+                        </div>
                         <div class="data-item">Data2</div>
                         <div class="data-item">Data3</div>
                         <div class="data-item">Data4</div>
@@ -39,5 +73,7 @@
     </div>
 </div>
 
+<script src="/dist/jquery.min.js"></script>
+<script src="/dist/js/bootstrap.min.js"></script> 
 <script src="/js/badyet.js"></script>
 <%- include('../layouts/footer.ejs') %>
