--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -18,11 +18,27 @@
                 </div>
 
                 <div class="row main-data">
+                    
                     <div class="col">
                         
 
                         <div class="data-item">
-                                Income for May <a role="button" data-toggle="collapse" class="btn main-control-btn" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>
+                            <div class="col-6">
+                                    <span>
+                                        <span>
+                                                <a role="button" data-toggle="collapse" class="btn main-control-btn" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>     
+                                        </span>
+
+                                            Income
+                                        <span>
+                                            For May
+                                        </span>
+
+                                    </span>
+                                    <a role="button" data-toggle="collapse" class="btn main-control-btn" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>     
+
+                            </div>
+                           
                             
                             
                                 <div class="collapse" id="collapseExample1">
