--- a/views/auth/sign_in.ejs
+++ b/views/auth/sign_in.ejs
@@ -21,7 +21,7 @@
                             <input type="password" name="password" class="form-control" id="userPassword" placeholder="Password">
                         </div>
                         
-                        <input type="hidden" name="_csrf" value="<%= csrfToken %>"> 
+                        <input type="hidden" name="_csrf" value="<%#= csrfToken %>"> 
                         <button type="submit" id="btn-sign-in" class="btn btn-primary btn-block">Sign In</button>
                         
                         <div class="form-group text-center main-form-policy">
