--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -23,20 +23,15 @@
                         
 
                         <div class="data-item">
-                            <div class="col-6">
-                                    <span>
-                                        <span>
-                                                <a role="button" data-toggle="collapse" class="btn main-control-btn" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>     
-                                        </span>
-
-                                            Income
-                                        <span>
-                                            For May
-                                        </span>
+                            <div class="col-6 income-header">
+                                    <span class="">
+                                        <span class="income-header-icon"><i class="fas fa-money-bill-alt"></i></span>
+                                        <span class="income-header-income">Income</span>
+                                        <span class="income-header-month"><small>for</small><%= month %></span>
 
                                     </span>
-                                    <a role="button" data-toggle="collapse" class="btn main-control-btn" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>     
 
+                                    <a role="button" data-toggle="collapse" class="btn main-control-btn" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>     
                             </div>
                            
                             
