migrating to sequelize

--- a/views/app/settings.ejs
+++ b/views/app/settings.ejs
@@ -13,8 +13,8 @@
                 <div class="col-4 profile-main">
                     
                     <h3>Profile Info</h3>
-                    <h5><%= currentUserUsername %></h5>
-                    <h5><%= currentUserEmail %></h5>
+                    <h5><%#= currentUserUsername %></h5>
+                    <h5><%#= currentUserEmail %></h5>
                     <a href="#" class="btn btn-info btn-sm" role="button">Change Password</a>
                     or
                     <a href="#" class="btn btn-danger btn-sm" role="button">Delete Account</a>
