--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -23,16 +23,20 @@
                         
 
                         <div class="data-item">
-                            <div class="col-6 income-header">
+                            <div class="col-12 income-header">
                                     <span class="">
                                         <span class="income-header-icon"><i class="fas fa-money-bill-alt"></i></span>
                                         <span class="income-header-income">Income</span>
-                                        <span class="income-header-month"><small>for</small><%= month %></span>
+                                        <span class="income-header-month"><small>for</small><%#= month %></span>
 
                                     </span>
-
-                                    <a role="button" data-toggle="collapse" class="btn main-control-btn" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>     
+                                    <a role="button" data-toggle="collapse" class="btn main-control-btn" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>    
+                                    
+                                    
                             </div>
+
+
+
                            
                             
                             
@@ -68,11 +72,6 @@
                             </div>
                             
                         </div>
-                        <div class="data-item">Data2</div>
-                        <div class="data-item">Data3</div>
-                        <div class="data-item">Data4</div>
-                        <div class="data-item">Data5</div>
-                        <div class="data-item">Data6</div>
 
                     </div>
                 </div>    
