--- a/views/app/sidepanel.ejs
+++ b/views/app/sidepanel.ejs
@@ -6,11 +6,11 @@
     <div class="row left-panel-control text-center">
         <div class="col">
             <div class="upper-main-control main-control-active">
-               <a role="button" class="btn main-control-btn" href="/app/badyet"><i class="fas fa-hand-holding-usd icon-settings"></i>Badyet</a>
+               <a role="button" class="btn main-control-btn no-focus" href="/app/badyet"><i class="fas fa-hand-holding-usd icon-settings"></i>Badyet</a>
             </div>
 
             <div class="lower-main-control">
-               <a role="button" class="btn main-control-btn" href="/app/settings"><i class="fas fa-user-cog icon-settings"></i>Settings</a>
+               <a role="button" class="btn main-control-btn no-focus" href="/app/settings"><i class="fas fa-user-cog icon-settings"></i>Settings</a>
             </div>
         </div>
     </div>
