--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -9,12 +9,22 @@
                     <div class="col">
                       
                         <div class="data-date">
-                            <div id="badyet-date">
-
+                            <div id="">
+                                <button type="button" class="btn btn-light badyet-date no-focus"><%= income.month %> <span><%= income.year %> <i class="fas fa-caret-up no-focus"></i></span></button>
+                                
+                                <div class="amount-budgeted">
+                                    <span class="amount-budgeted-amount">
+                                        $100.00
+                                    </span>
+                                    <span class="amount-budgeted-text">
+                                        left to budget
+                                    </span>
+                                </div>
                             </div>
-                            <!-- <button type="button" class="btn btn-light"><h1><strong>May <small>2019</small></strong></h1></button> -->
                         </div>
                     </div>
+
+                    
                 </div>
 
                 <div class="row main-data">
@@ -27,36 +37,33 @@
                                     <span class="">
                                         <span class="income-header-icon"><i class="fas fa-money-bill-alt"></i></span>
                                         <span class="income-header-income">Income</span>
-                                        <span class="income-header-month"><small>for</small><%#= month %></span>
+                                        <span class="income-header-month"><small>for</small><%= income.month %></span>
 
                                     </span>
-                                    <a role="button" data-toggle="collapse" class="btn main-control-btn" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>    
+                                    <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>    
                                     
                                     
                             </div>
 
 
+                    
+                            <div class="collapse show" id="collapseExample1">
+                                <div class="card card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                </div>
+                            </div>
 
-                           
-                            
-                            
-                                <div class="collapse" id="collapseExample1">
-                                    <div class="card card-body">
-                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                    </div>
+                            <div class="collapse show" id="collapseExample1">
+                                <div class="card card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
                                 </div>
-    
-                                <div class="collapse" id="collapseExample1">
-                                    <div class="card card-body">
-                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                    </div>
-                                </div>
+                            </div>
                         </div>
 
 
                         <div class="data-item">
                               
-                            Giving<a role="button" data-toggle="collapse" class="btn main-control-btn" aria-expanded="false" aria-controls="collapseExample" href="#collapseExample"><i class="fas fa-caret-up"></i></a>
+                            Giving<a role="button" data-toggle="collapse" class="btn main-control-btn no-focus" aria-expanded="false" aria-controls="collapseExample" href="#collapseExample"><i class="fas fa-caret-up"></i></a>
                             
                             
                             <div class="collapse" id="collapseExample">
