--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -23,64 +23,117 @@
                             </div>
                         </div>
                     </div>
-
                     
                 </div>
 
                 <div class="row main-data">
-                    
                     <div class="col">
                         
-
+                        
                         <div class="data-item">
                             <div class="col-12 income-header">
-                                    <span class="">
-                                        <span class="income-header-icon"><i class="fas fa-money-bill-alt"></i></span>
-                                        <span class="income-header-income">Income</span>
-                                        <span class="income-header-month"><small>for</small><%= income.month %></span>
-
-                                    </span>
-                                    <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>    
-                                    
-                                    
+                                <div class="row">
+                                    <div class="col-6">
+                                            <span class="">
+                                                <span class="income-header-icon"><i class="fas fa-money-bill-alt"></i></span>
+                                                <span class="income-header-income">Income</span>
+                                                <span class="income-header-month"><small>for</small><%= income.month %></span>
+                                            </span>
+                                            <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="row text-right income-header-pr-text">
+                                            <div class="col-6">Planned</div>
+                                            <div class="col-6">Received</div>
+                                        </div>
+                                    </div>
+                                </div>                    
                             </div>
 
-
-                    
+                            <% incomeItems.forEach(( item, index ) => { %>
+                                <div class="collapse show" id="collapseExample1">
+                                        <div class="card card-body">
+                                            <div class="row">
+                                                <div class="col-6">
+                                                    <span class="income-header-income"><%= item.label %></span>      
+                                                </div>
+                                                <div class="col-6">
+                                                    <div class="row text-right income-header-pr-text">
+                                                        <div class="col-6">$<%= item.planned %></div>
+                                                        <div class="col-6">$<%= item.spend %></div>
+                                                    </div>
+                                                </div>
+                                            </div>          
+                                        </div>
+                                    </div>
+                            <% }) %>   
+                
+                           
                             <div class="collapse show" id="collapseExample1">
-                                <div class="card card-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                </div>
-                            </div>
-
-                            <div class="collapse show" id="collapseExample1">
-                                <div class="card card-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                <div class="card card-body btn-add-paycheck">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <a role="button" data-toggle="" class="btn no-focus btn-add-paycheck-text" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Paycheck</a>  
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="row text-right income-header-pr-text">
+                                                <div class="col-6">$00.00</div>
+                                                <div class="col-6">$00.00</div>
+                                            </div>
+                                        </div>
+                                    </div>        
                                 </div>
                             </div>
                         </div>
 
 
-                        <div class="data-item">
-                              
-                            Giving<a role="button" data-toggle="collapse" class="btn main-control-btn no-focus" aria-expanded="false" aria-controls="collapseExample" href="#collapseExample"><i class="fas fa-caret-up"></i></a>
-                            
-                            
-                            <div class="collapse" id="collapseExample">
-                                <div class="card card-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                                </div>
-                            </div>
 
-                            <div class="collapse" id="collapseExample">
-                                <div class="card card-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                        <% categories.forEach(( category, index ) => { %>
+                                        
+                                <div class="data-item">
+
+                                        <div class="col-12 income-header">
+                                            <div class="row">
+                                                <div class="col-6">
+                                                        <span class="">
+                                                            <span class="income-header-income"><%= category.title %></span>
+                                                        </span>
+                                                        <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample"><i class="fas fa-caret-up"></i></a>
+                                                </div>
+                                                <div class="col-6">
+                                                    <div class="row text-right income-header-pr-text">
+                                                        <div class="col-6">Planned</div>
+                                                        <div class="col-6">Received</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="collapse show" id="collapseExample">
+                                                <div class="card card-body btn-add-paycheck">
+                                                    <div class="row">
+                                                        <div class="col-6">
+                                                            <a role="button" data-toggle="" class="btn no-focus btn-add-paycheck-text" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Item</a>  
+                                                        </div>
+                                                        <div class="col-6">
+                                                            <div class="row text-right income-header-pr-text">
+                                                                <div class="col-6">$00.00</div>
+                                                                <div class="col-6">$00.00</div>
+                                                            </div>
+                                                        </div>
+                                                    </div>        
+                                                </div>
+                                            </div>
+                                        </div>
+                
                                 </div>
-                            </div>
-                            
-                        </div>
+                                           
+                        <% }) %>   
+
 
                     </div>
+
                 </div>    
         </div>
 
