--- a/views/app/badyet.ejs
+++ b/views/app/badyet.ejs
@@ -7,153 +7,58 @@
         <div class="col-6 main-panel-container">
                 <div class="row main-date sticky-top"> 
                     <div class="col">
-                      
-                        <div class="data-date">
-                            <div id="">
-                                <button type="button" class="btn btn-light badyet-date no-focus"><%= income.month %> <span><%= income.year %> <i class="fas fa-caret-up no-focus"></i></span></button>
-                                
-                                <div class="amount-budgeted">
-                                    <span class="amount-budgeted-amount">
-                                        $100.00
-                                    </span>
-                                    <span class="amount-budgeted-text">
-                                        left to budget
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    
+                      <%- include('_date.ejs', { income: income }) %>
+                    </div>              
                 </div>
 
                 <div class="row main-data">
                     <div class="col">
                         
-                        
-                        <div class="data-item">
-                            <div class="col-12 income-header">
-                                <div class="row">
-                                    <div class="col-6">
-                                            <span class="">
-                                                <span class="income-header-icon"><i class="fas fa-money-bill-alt"></i></span>
-                                                <span class="income-header-income">Income</span>
-                                                <span class="income-header-month"><small>for</small><%= income.month %></span>
-                                            </span>
-                                            <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="row text-right income-header-pr-text">
-                                            <div class="col-6">Planned</div>
-                                            <div class="col-6">Received</div>
-                                        </div>
-                                    </div>
-                                </div>                    
-                            </div>
+                        <%- include('_incomes.ejs', { income: income }) %>
 
-                            <% incomeItems.forEach(( item, index ) => { %>
-                                <div class="collapse show" id="collapseExample1">
-                                        <div class="card card-body">
-                                            <div class="row">
-                                                <div class="col-6">
-                                                    <span class="income-header-income"><%= item.label %></span>      
-                                                </div>
-                                                <div class="col-6">
-                                                    <div class="row text-right income-header-pr-text">
-                                                        <div class="col-6">$<%= item.planned %></div>
-                                                        <div class="col-6">$<%= item.spend %></div>
-                                                    </div>
-                                                </div>
-                                            </div>          
-                                        </div>
-                                    </div>
-                            <% }) %>   
-                
-                           
-                            <div class="collapse show" id="collapseExample1">
-                                <div class="card card-body btn-add-paycheck">
+                        <% if( !categories ) { %>                                     
+                            <div class="data-item">
+                                <div class="col-12 income-header">
                                     <div class="row">
                                         <div class="col-6">
-                                            <a role="button" data-toggle="" class="btn no-focus btn-add-paycheck-text" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Paycheck</a>  
+                                                <span class="">
+                                                    <span class="income-header-income">UNTITLED</span>
+                                                </span>
+                                                <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample1"><i class="fas fa-caret-up"></i></a>
                                         </div>
                                         <div class="col-6">
                                             <div class="row text-right income-header-pr-text">
-                                                <div class="col-6">$00.00</div>
-                                                <div class="col-6">$00.00</div>
+                                                <div class="col-6">Planned</div>
+                                                <div class="col-6">Received</div>
                                             </div>
                                         </div>
-                                    </div>        
+                                    </div>
+                                </div>
+
+                                <div class="collapse show" id="collapseExample1">
+                                    <div class="card card-body btn-add-paycheck">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <a role="button" data-toggle="" class="btn no-focus btn-add-paycheck-text" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Item</a>  
+                                            </div>
+                                        </div>        
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        <% } else { %>
 
-
-
-                        <% categories.forEach(( category, index ) => { %>
-                                        
-                                <div class="data-item">
-                                        <h5>Insid Category: <%= index %></h5>
-                                        <div class="col-12 income-header">
-                                            <div class="row">
-                                                <div class="col-6">
-                                                        <span class="">
-                                                            <span class="income-header-income"><%= category.title %></span>
-                                                        </span>
-                                                        <a role="button" data-toggle="collapse" class="btn no-focus" href="#collapseExample-<%= category.id %>"><i class="fas fa-caret-up"></i></a>
-                                                </div>
-                                                <div class="col-6">
-                                                    <div class="row text-right income-header-pr-text">
-                                                        <div class="col-6">Planned</div>
-                                                        <div class="col-6">Received</div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <!-- data here -->
-                                     <% categoriesItems.forEach(( item, index ) => { %>  
-                                        <h5>Insid Item: <%= index %></h5>
-                                        <div class="collapse show" id="collapseExample-<%= category.id %>">
-                                            <div class="card card-body">
-                                                <div class="row">
-                                                    <div class="col-6">
-                                                        <span class="income-header-income"><%= item.label %></span>      
-                                                    </div>
-                                                    <div class="col-6">
-                                                        <div class="row text-right income-header-pr-text">
-                                                            <div class="col-6">$<%= item.planned %></div>
-                                                            <div class="col-6">$<%= item.spend %></div>
-                                                        </div>
-                                                    </div>
-                                                </div>          
-                                            </div>
-                                        </div>
-
-                                    <% }) %>
-
-                                        <div class="collapse show" id="collapseExample-<%= category.id %>">
-                                                <div class="card card-body btn-add-paycheck">
-                                                    <div class="row">
-                                                        <div class="col-6">
-                                                            <a role="button" data-toggle="" class="btn no-focus btn-add-paycheck-text" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Item</a>  
-                                                        </div>
-                                                        <div class="col-6">
-                                                            <div class="row text-right income-header-pr-text">
-                                                                <div class="col-6">$00.00</div>
-                                                                <div class="col-6">$00.00</div>
-                                                            </div>
-                                                        </div>
-                                                    </div>        
-                                                </div>
-                                            </div>
-                                    </div>                
-                              
-                                           
-                        <% }) %>   
-
-
+                            <%- include('_categories.ejs', { categories: categories }) %>
+                        <% } %>                                
                     </div>
-
-                </div>    
+                </div> 
+                
+                <div class="row main-data main-data-category">
+                    <div class="col">                                
+                        <div class="data-item add-group-category">    
+                           <button role="button" data-toggle="" id="add-category-button" class="btn no-focus" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i><span>ADD GROUP</span></button> 
+                        </div>                                 
+                    </div>
+                </div>         
         </div>
 
         <div class="col-4 right-panel-container sticky-top">
