--- a/views/app/_categories.ejs
+++ b/views/app/_categories.ejs
@@ -39,10 +39,10 @@
         <% }) %>
 
             <div class="collapse show" id="collapseExample-<%= category.id %>">
-                <div class="card card-body btn-add-paycheck">
+                <div class="card card-body">
                     <div class="row">
                         <div class="col-6">
-                            <a role="button" data-toggle="" class="btn no-focus btn-add-paycheck-text" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Item</a>  
+                            <a role="button" data-toggle="" class="btn no-focus btn-add-items" href="#"><i class="fas fa-plus btn-add-paycheck-adder"></i> Add Item</a>  
                         </div>
                         <div class="col-6">
                             <div class="row text-right income-header-pr-text">
